--- a/app/globals.css
+++ b/app/globals.css
@@ -26,19 +26,27 @@
 	}
 	@font-face {
 		font-family: 'heading';
-		src: url('../public/fonts/raleway-bold.woff') format('woff');
+		src: url('../public/fonts/Raleway-Extrabold.woff2') format('woff2');
+		font-weight: 800;
+		font-display: swap;
+		font-style: normal;
+	}
+	@font-face {
+		font-family: 'heading';
+		src: url('../public/fonts/Raleway-Bold.woff2') format('woff2');
 		font-weight: 700;
 		font-display: swap;
 		font-style: normal;
 	}
-	:root[data-theme='dark'] {
+
+	:root {
 		--white: 0deg, 0%, 100%;
 
 		--gray-100: 222deg, 25%, 10%;
 		--gray-200: 222deg, 25%, 13%;
 		--gray-600: 222deg, 8%, 61%;
 		--gray-700: 222deg, 10%, 70%;
-		--gray-800: 222deg, 10%, 79%;
+		--gray-800: 222deg, 12%, 82%;
 		--gray-900: 222deg, 2%, 92%;
 
 		--blue-200: 222deg, 24%, 19%;
@@ -75,60 +83,62 @@
 
 		--yellow-200: 42deg, 15%, 17%;
 		--yellow-300: 41deg, 37%, 25%;
-		--yellow-500: 41deg, 80%, 67%;
+		--yellow-500: 41deg, 88%, 74%;
 		--yellow-700: 39deg, 9%, 58%;
 		--yellow-800: 41deg, 26%, 81%;
 		--yellow-900: 38deg, 80%, 98%;
 	}
 
-	:root[data-theme='light'] {
-		--white: 0deg, 0%, 100%;
+	@media (prefers-color-scheme: light) {
+		:root {
+			--white: 0deg, 0%, 100%;
 
-		--gray-100: 220deg, 60%, 99%;
-		--gray-200: 220deg, 73%, 97%;
-		--gray-600: 221deg, 11%, 51%;
-		--gray-700: 223deg, 14%, 39%;
-		--gray-800: 222deg, 19%, 31%;
-		--gray-900: 221deg, 24%, 24%;
+			--gray-100: 220deg, 60%, 99%;
+			--gray-200: 220deg, 73%, 97%;
+			--gray-600: 221deg, 11%, 51%;
+			--gray-700: 223deg, 14%, 39%;
+			--gray-800: 222deg, 19%, 31%;
+			--gray-900: 221deg, 24%, 24%;
 
-		--blue-200: 212deg, 90%, 96%;
-		--blue-300: 213deg, 100%, 94%;
-		--blue-500: 215deg, 94%, 50%;
-		--blue-700: 215deg, 33%, 44%;
-		--blue-800: 215deg, 35%, 31%;
-		--blue-900: 215deg, 54%, 24%;
+			--blue-200: 212deg, 90%, 96%;
+			--blue-300: 213deg, 100%, 94%;
+			--blue-500: 215deg, 94%, 50%;
+			--blue-700: 215deg, 33%, 44%;
+			--blue-800: 215deg, 35%, 31%;
+			--blue-900: 215deg, 54%, 24%;
 
-		--orange-200: 25deg, 90%, 96%;
-		--orange-300: 25deg, 95%, 92%;
-		--orange-500: 25deg, 79%, 43%;
+			--orange-200: 25deg, 90%, 96%;
+			--orange-300: 25deg, 95%, 92%;
+			--orange-500: 25deg, 79%, 43%;
 
-		--green-200: 138deg, 62%, 96%;
-		--green-300: 147deg, 50%, 93%;
-		--green-500: 148deg, 68%, 37%;
-		--green-700: 148deg, 19%, 44%;
-		--green-800: 148deg, 15%, 31%;
-		--green-900: 149deg, 24%, 24%;
+			--green-200: 138deg, 62%, 96%;
+			--green-300: 147deg, 50%, 93%;
+			--green-500: 148deg, 68%, 37%;
+			--green-700: 148deg, 19%, 44%;
+			--green-800: 148deg, 15%, 31%;
+			--green-900: 149deg, 24%, 24%;
 
-		--purple-200: 250deg, 67%, 96%;
-		--purple-300: 250deg, 94%, 96%;
-		--purple-500: 250deg, 95%, 64%;
-		--purple-700: 250deg, 18%, 55%;
-		--purple-800: 251deg, 20%, 40%;
-		--purple-900: 251deg, 24%, 33%;
+			--purple-200: 250deg, 67%, 96%;
+			--purple-300: 250deg, 94%, 96%;
+			--purple-500: 250deg, 95%, 64%;
+			--purple-700: 250deg, 18%, 55%;
+			--purple-800: 251deg, 20%, 40%;
+			--purple-900: 251deg, 24%, 33%;
 
-		--red-200: 348deg, 56%, 96%;
-		--red-300: 346deg, 94%, 94%;
-		--red-500: 345deg, 60%, 53%;
-		--red-700: 345deg, 16%, 52%;
-		--red-800: 344deg, 20%, 37%;
-		--red-900: 345deg, 24%, 30%;
+			--red-200: 348deg, 56%, 96%;
+			--red-300: 346deg, 94%, 94%;
+			--red-500: 345deg, 60%, 53%;
+			--red-700: 345deg, 16%, 52%;
+			--red-800: 344deg, 20%, 37%;
+			--red-900: 345deg, 24%, 30%;
 
-		--yellow-200: 24deg, 71%, 96%;
-		--yellow-300: 41deg, 94%, 93%;
-		--yellow-500: 41deg, 90%, 32%;
-		--yellow-700: 41deg, 16%, 46%;
-		--yellow-800: 40deg, 15%, 31%;
-		--yellow-900: 41deg, 24%, 24%;
+			--yellow-200: 24deg, 71%, 96%;
+			--yellow-300: 41deg, 94%, 93%;
+			--yellow-500: 41deg, 90%, 32%;
+			--yellow-700: 41deg, 16%, 46%;
+			--yellow-800: 40deg, 15%, 31%;
+			--yellow-900: 41deg, 24%, 24%;
+		}
 	}
 
 	@media (prefers-color-scheme: lime) {
@@ -154,8 +164,12 @@
 		@apply font-heading text-gray-900;
 	}
 
+	body {
+		@apply selection:bg-red-200 selection:text-red-500;
+	}
+
 	.container {
-		@apply mx-auto grid grid-cols-4 gap-x-16 px-structurePadding desktop:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
+		@apply mx-auto grid grid-cols-4 gap-x-16 px-structurePadding tablet:px-0 tablet:grid-cols-8 tablet:gap-x-16 desktop:grid-cols-12 desktop:gap-x-16;
 	}
 	.responsive-sections {
 		@apply col-start-1 col-span-4 tablet:col-start-2 tablet:col-span-6 desktop:col-start-3 desktop:col-span-8;
@@ -187,22 +201,22 @@
 		@apply text-gray-800 text-bodyMobileBoldLarge tablet:text-bodyWebBoldLarge;
 	}
 	.i-base {
-		@apply text-bodyMobileItalicBase tablet:text-bodyWebItalicBase;
+		@apply pt-3 italic text-bodyMobileItalicBase tablet:text-bodyWebItalicBase;
 	}
 	.i-large {
-		@apply text-bodyMobileItalicLarge tablet:text-bodyWebItalicLarge;
+		@apply pt-3 italic text-bodyMobileItalicLarge tablet:text-bodyWebItalicLarge;
 	}
 	.heading-bigger {
 		@apply text-headingMobileBigger tablet:text-headingWebBigger;
 	}
 	.heading-big {
-		@apply mb-4 text-headingMobileBig tablet:text-headingWebBig;
+		@apply mb-6 text-headingMobileBig tablet:text-headingWebBig;
 	}
 	.heading-base {
-		@apply mb-4 text-headingMobileBase tablet:text-headingWebBase;
+		@apply mb-6 text-headingMobileBase tablet:text-headingWebBase;
 	}
 	.heading-small {
-		@apply mb-10 text-headingMobileSmall tablet:text-headingWebSmall uppercase;
+		@apply mb-4 text-headingMobileSmall tablet:text-headingWebSmall;
 	}
 
 	.heading-link {
@@ -301,8 +315,12 @@
 		@apply hero bg-blue-200 border-blue-900/[5%];
 	}
 
+	.hero {
+		@apply tablet:border-2 tablet:p-16 tablet:rounded-[2rem] -mx-structureMargin px-structurePadding py-10 col-start-1 col-span-4 tablet:col-start-2 tablet:col-span-6 desktop:col-start-3 desktop:col-span-8 tablet:-mx-16 mb-32;
+	}
+
 	.hero-mini {
-		@apply bg-purple-200 border-gray-900/[5%] border-2 p-10 col-start-1 col-span-4 tablet:p-16 rounded-[2rem] tablet:col-start-3 tablet:col-span-8  mb-32;
+		@apply tablet:border-2 p-10 col-start-1 col-span-4 -mx-structureMargin tablet:p-16 tablet:rounded-[2rem] tablet:col-start-3 tablet:col-span-8 mb-32;
 	}
 	.hero-mini-gray {
 		@apply hero-mini bg-gray-200 border-gray-900/[5%];
