--- a/public/styles.css
+++ b/public/styles.css
@@ -482,7 +482,10 @@ video {
   font-style: normal;
 }
 
-:root[data-theme='dark'] {
+:root[data-theme='test'] {
+}
+
+:root {
   --white: 0deg, 0%, 100%;
   --gray-100: 222deg, 25%, 10%;
   --gray-200: 222deg, 25%, 13%;
@@ -525,47 +528,49 @@ video {
   --yellow-900: 38deg, 80%, 98%;
 }
 
-:root[data-theme='light'] {
-  --white: 0deg, 0%, 100%;
-  --gray-100: 220deg, 60%, 99%;
-  --gray-200: 220deg, 73%, 97%;
-  --gray-600: 221deg, 11%, 51%;
-  --gray-700: 223deg, 14%, 39%;
-  --gray-800: 222deg, 19%, 31%;
-  --gray-900: 221deg, 24%, 24%;
-  --blue-200: 212deg, 90%, 96%;
-  --blue-300: 213deg, 100%, 94%;
-  --blue-500: 215deg, 94%, 50%;
-  --blue-700: 215deg, 33%, 44%;
-  --blue-800: 215deg, 35%, 31%;
-  --blue-900: 215deg, 54%, 24%;
-  --orange-200: 25deg, 90%, 96%;
-  --orange-300: 25deg, 95%, 92%;
-  --orange-500: 25deg, 79%, 43%;
-  --green-200: 138deg, 62%, 96%;
-  --green-300: 147deg, 50%, 93%;
-  --green-500: 148deg, 68%, 37%;
-  --green-700: 148deg, 19%, 44%;
-  --green-800: 148deg, 15%, 31%;
-  --green-900: 149deg, 24%, 24%;
-  --purple-200: 250deg, 67%, 96%;
-  --purple-300: 250deg, 94%, 96%;
-  --purple-500: 250deg, 95%, 64%;
-  --purple-700: 250deg, 18%, 55%;
-  --purple-800: 251deg, 20%, 40%;
-  --purple-900: 251deg, 24%, 33%;
-  --red-200: 348deg, 56%, 96%;
-  --red-300: 346deg, 94%, 94%;
-  --red-500: 345deg, 60%, 53%;
-  --red-700: 345deg, 16%, 52%;
-  --red-800: 344deg, 20%, 37%;
-  --red-900: 345deg, 24%, 30%;
-  --yellow-200: 24deg, 71%, 96%;
-  --yellow-300: 41deg, 94%, 93%;
-  --yellow-500: 41deg, 90%, 32%;
-  --yellow-700: 41deg, 16%, 46%;
-  --yellow-800: 40deg, 15%, 31%;
-  --yellow-900: 41deg, 24%, 24%;
+@media (prefers-color-scheme: light) {
+  :root {
+    --white: 0deg, 0%, 100%;
+    --gray-100: 220deg, 60%, 99%;
+    --gray-200: 220deg, 73%, 97%;
+    --gray-600: 221deg, 11%, 51%;
+    --gray-700: 223deg, 14%, 39%;
+    --gray-800: 222deg, 19%, 31%;
+    --gray-900: 221deg, 24%, 24%;
+    --blue-200: 212deg, 90%, 96%;
+    --blue-300: 213deg, 100%, 94%;
+    --blue-500: 215deg, 94%, 50%;
+    --blue-700: 215deg, 33%, 44%;
+    --blue-800: 215deg, 35%, 31%;
+    --blue-900: 215deg, 54%, 24%;
+    --orange-200: 25deg, 90%, 96%;
+    --orange-300: 25deg, 95%, 92%;
+    --orange-500: 25deg, 79%, 43%;
+    --green-200: 138deg, 62%, 96%;
+    --green-300: 147deg, 50%, 93%;
+    --green-500: 148deg, 68%, 37%;
+    --green-700: 148deg, 19%, 44%;
+    --green-800: 148deg, 15%, 31%;
+    --green-900: 149deg, 24%, 24%;
+    --purple-200: 250deg, 67%, 96%;
+    --purple-300: 250deg, 94%, 96%;
+    --purple-500: 250deg, 95%, 64%;
+    --purple-700: 250deg, 18%, 55%;
+    --purple-800: 251deg, 20%, 40%;
+    --purple-900: 251deg, 24%, 33%;
+    --red-200: 348deg, 56%, 96%;
+    --red-300: 346deg, 94%, 94%;
+    --red-500: 345deg, 60%, 53%;
+    --red-700: 345deg, 16%, 52%;
+    --red-800: 344deg, 20%, 37%;
+    --red-900: 345deg, 24%, 30%;
+    --yellow-200: 24deg, 71%, 96%;
+    --yellow-300: 41deg, 94%, 93%;
+    --yellow-500: 41deg, 90%, 32%;
+    --yellow-700: 41deg, 16%, 46%;
+    --yellow-800: 40deg, 15%, 31%;
+    --yellow-900: 41deg, 24%, 24%;
+  }
 }
 
 @media (prefers-color-scheme: lime) {
